--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/blue">
+    >
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/main_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@id/ad_container_view"/>
 
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/app_bar"/>
-
-        <FrameLayout
-            android:id="@+id/main_frame"
-            android:layout_above="@id/ad_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/toolbar"/>
-
-        <FrameLayout
-            android:id="@+id/ad_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@id/customBottomBar"/>
-
-        <tbc.uncagedmist.bhulekhkheshra.Utility.CurvedBottomNavigationView
-            android:id="@+id/customBottomBar"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            app:menu="@menu/menu_item"
-            android:layout_alignParentBottom="true"/>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/stateShare"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_baseline_share_24"
-            android:layout_above="@id/ad_container"
-            android:layout_alignParentEnd="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/blue"/>
-
-    </RelativeLayout>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_gravity="bottom|center"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/ad_container_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20sp"
-        app:tint="@android:color/white"
-        app:backgroundTint="@color/color1"/>
+        android:layout_alignParentBottom="true"/>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
