--- a/app/src/main/res/layout/my_item_list.xml
+++ b/app/src/main/res/layout/my_item_list.xml
@@ -1,42 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/state_card"
-    android:orientation="vertical"
-    android:layout_margin="1dp"
-    app:cardElevation="10dp"
-    app:cardCornerRadius="10dp">
+    android:layout_height="130dp"
+    android:id="@+id/stateCard"
+    android:layout_marginBottom="2dp"
+    android:background="@drawable/background_banner">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/stateImage"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
+        android:scaleType="centerCrop" />
+
+    <TextView
+        android:id="@+id/stateName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit ="marquee_forever"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:scrollHorizontally="true"
+        android:layout_toLeftOf="@id/stateImage"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="20dp"/>
 
-        <ImageView
-            android:id="@+id/state_image"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop" />
+    <TextView
+        android:id="@+id/stateDesc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#ffffff"
+        android:textSize="16sp"
+        android:singleLine="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit ="marquee_forever"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:scrollHorizontally="true"
+        android:layout_below="@id/stateName"
+        android:layout_toLeftOf="@id/stateImage"
+        android:layout_marginStart="20dp"/>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_centerInParent="true"
-            android:indeterminate="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/state_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@android:color/white"
-            android:background="@color/overlayBackgroundMenu"
-            android:gravity="center_horizontal"
-            android:textSize="20sp" />
-
-    </RelativeLayout>
-
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
